--- a/style.css
+++ b/style.css
@@ -2,26 +2,29 @@
     margin: 0px;
     padding: 0px;
 }
-.outer_container{
-    padding: 30px;
-}
+
 .header{
     
     float: left;
-    background: #ffff);
+    background: #ffff;
     width: 100%;
-    
+    height: 100px;
     position: sticky;
      top: 0;
 }
 .log{
-    height: 80px;
+    height: 60px;
+    margin-left: 20px;
 }
 .img-container{
     background-color: #ffff;
     float: left;
     width: 50%;
-    height: 80px;  
+    height: 50px;  
+}
+.icn{
+    width: 50px;
+    height: 50px;
 }
 .srch{
     padding: 20px;
@@ -36,12 +39,12 @@
     float: left;
     background-color:#ffff;
     width: 50%;
-    height: 60px;
+    height: 50px;
 }
 .tab2{
-    margin-top: 20px;
+    margin-top: 25px;
     margin-left: 20px;
-    margin-right: 50px;
+   
     margin-right: auto;
     float: left;
     background-color: rgb(197, 18, 113);
@@ -51,7 +54,6 @@
 }
 .hlink{
     margin-right: 40px;
-    text-decoration: none;
     padding-left: 40%;
     padding-top: 25px;
     color: #ffff;
@@ -67,50 +69,85 @@
 .ltcov:hover{
     text-decoration: underline;
 }
-.img-container1{
+.imgpie{
     display: flex;
-    width: 1349px;
-    height 666px;
-    padding : 20px;
-    float: left;
-    margin-top: 30px;
+    justify-content: space-between;
+    padding-top: 50px;
+    margin-left: 20px;
+    margin-right: 30px;
+    width: 100%;
+    height: 700px;
 }
-.img1{
-    float: left;
-    width: 50%;
-    height: 100%;
+.imgpie1{
+    width: 660px;
+    height: 700px;
    
 }
-.img2{
-    padding: 10px;
-    float: left;
-    width: 50%;
-    height: 100%;
+.imgpie11{
+    width: 100%;
+    height: 210px;
+    background-image: url(pi_one.jpg);
 }
-.rpie{
-    font-size: 60px;
-    font-weight: bold;
-    color: #ffff;
+
+.imgpie12{
+    margin-top: 20px;
+    margin-left: 25px;
+    width: 100%;
+    height: 210px;
+}
+.imgpie13{
+    margin-left: 25px;
+    margin-top: 20px;
+    width: 550px;
+    height: 210px;
+}
+.lbll1{
     background-color: black;
-    line-height: 80px;
+    color: white;
+    font-size: 70px;
+    margin-top: 20px;
+    letter-spacing: 5px;
+    font-weight: bold;
+
 }
-.hf{
-    padding-top: 100px;
-    color: darkmagenta;
-    line-height: 30px;
+
+.imgpie2{
+    width: 660px;
+    height: 700px;
+    
 }
-.c1{
-    padding-right: 10px;
-    float: right;
-    padding-left: 50px;
+
+.imgpie21{
+    width: 625px;
+    height: 450px;
+    background-image: url(pi_main.jpg);
 }
+.imgpie22{
+    display: flex;
+    justify-content: space-between;
+    width: 625px;
+    height: 200px;
+    margin-top: 20px;
+
+}
+.imgpie221{
+    width: 310px;
+    height: 200px;
+    background-image: url(pi_small_three.jpg);
+}
+.imgpie222{
+    width: 310px;
+    height: 200px;
+    background-image: url(pi_small_four.jpg);
+}
+
 .graduate{
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 50px;
     margin-bottom: 60px;
     
-    float: left;
+    display: flex;
     background-color: rgb(248, 244, 246);
     width: 1349px;
     height: 70px;
@@ -121,13 +158,13 @@
     margin-right: 10px;
     width: 645px;
     height: 70px;
-float: left;
+    display: flex;
 background-color: cyan;
 }
 .grright{
     padding-top: 30px;
     margin-left: 10px;
-float: left;
+display: flex;
 width: 645px;
 height: 70px;
 background-color: deeppink;
@@ -162,8 +199,24 @@ background-color: deeppink;
 .lbtn:hover{
     cursor: pointer;
 }
+.c1{
+    display: flex;
+    justify-content: space-between;
+    width: 260px;
+    height: 50px;
+    margin-left: 200px;
+}
+.c2{
+    display: flex;
+    justify-content: space-between;
+    width: 260px;
+    height: 50px;
+    margin-left: 250px;
+}
 .videobox{
-    margin-left: 20px;
+    width: 100%;
+    height: 800px;
+    margin-left: 30px;
     margin-top: 100px;
     
 }
@@ -187,7 +240,7 @@ background-color: deeppink;
     height: 800px;
     display: flex;
     margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 40px;
 
 }
 .lf1{
@@ -315,10 +368,15 @@ background-image: url(earth.jpg);
     font-size: 20px;
     line-height: 30px;
     text-align: center;
-    color: black;
-    background-color: darkturquoise;
+    color: darkturquoise;
+    background-color: black;
     
 
+}
+.btn1:hover{
+    cursor: pointer;
+    color: black;
+    background-color: darkturquoise;
 }
 .evdiv{
     margin-left: 20px;
@@ -413,15 +471,14 @@ background-image: url(subj.png);
     font-size: 20px;
     line-height: 30px;
     text-align: center;
-    color: black;
-    background-color: darkturquoise;
-    
-    
+    color: darkturquoise;
+    background-color: black; 
 
 }
-.btn1:hover{
+.btn2:hover{
     cursor: pointer;
-    
+    color: black;
+    background-color: darkturquoise; 
 }
 .vicontainer{
     margin-left: 30px;
